[package]
name = "www-rust-lang-org"
version = "0.1.0"
authors = ["Ashley Williams <ashley666ashley@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
fluent = "0.6.0"
fluent-bundle = "0.6.0"
fluent-syntax = "0.9.0"
fluent-locale = "0.5.0"
rand = "0.7.0"
regex = "1"
rocket = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8.9"
sass-rs = "0.2.2"
reqwest = "0.9.18"
toml = "0.5.1"
serde_json = "1.0"
rust_team_data = { git = "https://github.com/rust-lang/team" }
handlebars = "1.1.0"
siphasher = "0.3.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]
